force-app/main/default/objects/FEC_Action_Button__c/FEC_Action_Button__c.object-meta.xml
<CustomObject>
    <description>Quản lý các button hiển thị ở từng Screen Stage</description>
    <label>Action Button</label>
    <nameField>
        <label>Action Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Buttons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>