force-app/main/default/objects/FEC_Action_Button__c/fields/FEC_Active__c.field-meta.xml
<CustomField>
    <fullName>FEC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái của Action Button</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>