force-app/main/default/objects/FEC_Action_Button__c/fields/FEC_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>FEC_Apex_Class__c</fullName>
    <description>Apex Class tương ứng với Button</description>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>