force-app/main/default/objects/FEC_Action_Button__c/fields/FEC_FlowID__c.field-meta.xml
<CustomField>
    <fullName>FEC_FlowID__c</fullName>
    <description>Flow tương ứng với button</description>
    <label>FlowID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>