force-app/main/default/objects/FEC_Action_Button__c/fields/FEC_Input_Param__c.field-meta.xml
<CustomField>
    <fullName>FEC_Input_Param__c</fullName>
    <description>ID phục vụ query cho Flow ID và Apex Class</description>
    <label>Input Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>