force-app/main/default/objects/FEC_Action_Button__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Type__c</columns>
    <columns>FEC_Code__c</columns>
    <columns>FEC_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Action Buttons</label>
</ListView>