force-app/main/default/objects/FEC_Action_Button__c/listViews/CS_Card_Issuance_FEC_Action_Button.listView-meta.xml
<ListView>
    <fullName>CS_Card_Issuance_FEC_Action_Button</fullName>
    <filterScope>Queue</filterScope>
    <label>Test v1</label>
    <queue>CS_Card_Issuance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>